# wildfire_fusion_project

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: config.yaml
scripts/: run_on_folder.py  run_on_video.py
src/wildfire_fusion/: __init__.py  guidance.py  messaging.py  pipeline.py  rdp.py  utils.py
